feat(core): update core part to handle request state and data

--- a/config/client/tsconfig.app.json
+++ b/config/client/tsconfig.app.json
@@ -12,8 +12,11 @@
     "baseUrl": "../..",
     "paths": {
       "@/*": ["./src/*"],
-      "@/core/*": ["./src/core/*"],
-      "pages/*": ["./src/client/pages/*"]
+      "@core": ["./src/core/core/main.ts"],
+      "@services": ["./src/core/services/main.ts"],
+      "@watchers": ["./src/core/watchers/main.ts"],
+      "pages/*": ["./src/client/pages/*"],
+      "app/*": ["./src/client/app/*"]
     }
   }
 }
