--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@nightwatch/vue": "^3.1.1",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/vue": "^8.1.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
@@ -43,6 +45,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "geckodriver": "^4.4.1",
+    "jest": "^29.7.0",
     "jsdom": "^24.1.0",
     "nightwatch": "^3.6.3",
     "nodemon": "^3.1.4",
