--- a/config/client/tsconfig.vitest.json
+++ b/config/client/tsconfig.vitest.json
@@ -12,6 +12,7 @@
       "@core": ["./src/core/core/main.ts"],
       "@services": ["./src/core/services/main.ts"],
       "@watchers": ["./src/core/watchers/main.ts"],
+      "@dto": ["./src/core/dto/main.ts"],
       "@utils/*": ["./src/core/utils/*"],
       "pages/*": ["./src/client/pages/*"],
       "app/*": ["./src/client/app/*"]
